# Weave

./: .env.example  .gitignore  CONTEXT.md  Memory.md  PRD.md  SEO_KEYWORD_STRATEGY.md  TDD.md  Weave_PRD_v1.0.md  Weave_TDD_v1.0.md  dev-changelog.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  spec-index.md  start.sh  turbo.json
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 89d82b9931f0_initial_schema.py  b3f7a1c2e4d5_add_page_embeddings.py  c5d9e4f6a7b8_rename_stripe_to_dodo_customer_id.py  d6e0f7a8b9c0_add_notifications_table.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/models/: __init__.py  credit.py  domain.py  link.py  metrics_history.py  notification.py  page.py  user.py  webhook.py
apps/api/app/routers/: analytics.py  auth.py  billing.py  credits.py  domains.py  links.py  matching.py  network.py  notifications.py  webhooks.py
apps/api/app/schemas/: auth.py  credit.py  domain.py  link.py
apps/api/app/services/: anchor.py  auth.py  crawler.py  credits.py  domain.py  embeddings.py  matching.py  metrics.py  niche_taxonomy.py  notification.py  triangulation.py
apps/api/app/workers/: __init__.py  bonus_worker.py  crawl_worker.py  digest_worker.py  embedding_worker.py  expiry_worker.py  metrics_worker.py  scheduler.py  sla_worker.py  triangle_worker.py  webhook_worker.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_api.py  test_auth.py  test_credits.py  test_embeddings.py
specs/: spec-001-v1.md  spec-002-v1.md  spec-003-v1.md  (+7 more)
(+44 files in other folders)
